[project]
name = "dotfiles-docs"
version = "0.1.0"
description = "Dotfiles documentation (personal)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sphinx>=8.1.3",
    "myst-parser>=4.0.1",
    "sphinxcontrib-plantuml>=0.31",
    "sphinxcontrib-mermaid>=1.0.0",
    "furo>=2024.4.27",
]
